rss-inventory-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rss-inventory-service
spec:
  selector:
    app: rss-inventory-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8989
